# cookiecutter-simple-module

./: cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: README.md  pyproject.toml
